examples/test/testpolicy6739.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6739
  namespace: namespace416
spec:
  podSelector:
    matchLabels:
      key16: value49
      key30: value22
      key10: value36
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key7: value42
          key33: value48
      podSelector:
        matchLabels:
          key7: value9
